--- a/39_Cookie-BOM/index.html
+++ b/39_Cookie-BOM/index.html
@@ -23,8 +23,8 @@
   <!-- <script src="./3_Window作为全局对象.js"></script> -->
   <!-- <script src="./4_window常见的属性-方法-事件.js"></script> -->
   <!-- <script src="./5_window继承自EventTarget.js"></script> -->
-  <!-- <script src="./6_localtion常见的属性-方法.js"></script> -->
-  <script src="./7_history常见的属性-方法.js"></script>
+  <script src="./6_localtion常见的属性-方法.js"></script>
+  <!-- <script src="./7_history常见的属性-方法.js"></script> -->
 </body>
 
 </html>
