--- a/12_实现call-apply-bind/index.html
+++ b/12_实现call-apply-bind/index.html
@@ -7,8 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- <script src="./1.实现call方法.js"></script> -->
-  <!-- <script src="./2_实现apply方法.js"></script> -->
-  <script src="./3_实现bind方法.js"></script>
+  <!-- <script src="./01.实现call方法.js"></script> -->
+  <script src="./02_实现apply方法.js"></script>
+  <!-- <script src="./03_实现bind方法.js"></script> -->
 </body>
 </html>
